--- a/openssh/repos/core-x86_64/PKGBUILD
+++ b/openssh/repos/core-x86_64/PKGBUILD
@@ -3,23 +3,23 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=openssh
-pkgver=8.1p1
-pkgrel=4
+pkgver=8.2p1
+pkgrel=1
 pkgdesc='Premier connectivity tool for remote login with the SSH protocol'
 url='https://www.openssh.com/portable.html'
 license=('custom:BSD')
 arch=('x86_64')
-makedepends=('linux-headers')
+makedepends=('linux-headers' 'git')
 depends=('krb5' 'openssl' 'libedit' 'ldns')
 optdepends=('xorg-xauth: X11 forwarding'
             'x11-ssh-askpass: input passphrase in X')
 validpgpkeys=('59C2118ED206D927E667EBE3D3E5F56B6D920D30')
-source=("https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"{,.asc}
+#source=("https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"{,.asc}
+source=("git://anongit.mindrot.org/openssh.git?signed#tag=V_8_2_P1"
         'sshd.conf'
         'sshd.pam'
         'glibc-2.31.patch')
-sha256sums=('02f5dbef3835d0753556f973cd57b4c19b6b1f6cd24c03445e23ac77ca1b93ff'
-            'SKIP'
+sha256sums=('SKIP'
             '4effac1186cc62617f44385415103021f72f674f8b8e26447fc1139c670090f6'
             '64576021515c0a98b0aaf0a0ae02e0f5ebe8ee525b1e647ab68f369f81ecd846'
             '25b4a4d9e2d9d3289ef30636a30e85fa1c71dd930d5efd712cca1a01a5019f93')
@@ -29,12 +29,15 @@ backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd')
 install=install
 
 prepare() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
-	patch -p1 -i "${srcdir}/glibc-2.31.patch"
+#	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd "${srcdir}/${pkgname}"
+	patch -p1 -i ../glibc-2.31.patch
+	autoreconf
 }
 
 build() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+#	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd "${srcdir}/${pkgname}"
 
 	./configure \
 		--prefix=/usr \
@@ -57,7 +60,8 @@ build() {
 }
 
 check() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+#	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd "${srcdir}/${pkgname}"
 
 	# Tests require openssh to be already installed system-wide,
 	# also connectivity tests will fail under makechrootpkg since
@@ -69,7 +73,8 @@ check() {
 }
 
 package() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
+#	cd "${srcdir}/${pkgname}-${pkgver}"
+	cd "${srcdir}/${pkgname}"
 
 	make DESTDIR="${pkgdir}" install
 
