--- a/openssh/trunk/PKGBUILD
+++ b/openssh/trunk/PKGBUILD
@@ -4,40 +4,40 @@
 
 pkgname=openssh
 pkgver=8.2p1
-pkgrel=1
+pkgrel=3
 pkgdesc='Premier connectivity tool for remote login with the SSH protocol'
 url='https://www.openssh.com/portable.html'
 license=('custom:BSD')
 arch=('x86_64')
-makedepends=('linux-headers' 'git')
+makedepends=('linux-headers' 'git' 'libfido2')
 depends=('krb5' 'openssl' 'libedit' 'ldns')
 optdepends=('xorg-xauth: X11 forwarding'
-            'x11-ssh-askpass: input passphrase in X')
+            'x11-ssh-askpass: input passphrase in X'
+            'libfido2: FIDO/U2F support')
 validpgpkeys=('59C2118ED206D927E667EBE3D3E5F56B6D920D30')
-#source=("https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"{,.asc}
-source=("git://anongit.mindrot.org/openssh.git?signed#tag=V_8_2_P1"
+#source=("git://anongit.mindrot.org/openssh.git?signed#tag=V_8_2_P1"
+source=("https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"{,.asc}
         'sshd.conf'
         'sshd.pam'
         'glibc-2.31.patch')
-sha256sums=('SKIP'
+sha256sums=('43925151e6cf6cee1450190c0e9af4dc36b41c12737619edff8bcebdff64e671'
+            'SKIP'
             '4effac1186cc62617f44385415103021f72f674f8b8e26447fc1139c670090f6'
             '64576021515c0a98b0aaf0a0ae02e0f5ebe8ee525b1e647ab68f369f81ecd846'
             '25b4a4d9e2d9d3289ef30636a30e85fa1c71dd930d5efd712cca1a01a5019f93')
 
 backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd')
 
-install=install
+#install=install
 
 prepare() {
-#	cd "${srcdir}/${pkgname}-${pkgver}"
-	cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 	patch -p1 -i ../glibc-2.31.patch
 	autoreconf
 }
 
 build() {
-#	cd "${srcdir}/${pkgname}-${pkgver}"
-	cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
 	./configure \
 		--prefix=/usr \
@@ -47,6 +47,7 @@ build() {
 		--disable-strip \
 		--with-ldns \
 		--with-libedit \
+		--with-security-key-builtin \
 		--with-ssl-engine \
 		--with-pam \
 		--with-privsep-user=nobody \
@@ -60,8 +61,7 @@ build() {
 }
 
 check() {
-#	cd "${srcdir}/${pkgname}-${pkgver}"
-	cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
 	# Tests require openssh to be already installed system-wide,
 	# also connectivity tests will fail under makechrootpkg since
@@ -73,8 +73,7 @@ check() {
 }
 
 package() {
-#	cd "${srcdir}/${pkgname}-${pkgver}"
-	cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
 	make DESTDIR="${pkgdir}" install
 
