--- a/htop/repos/extra-x86_64/PKGBUILD
+++ b/htop/repos/extra-x86_64/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=htop
 pkgver=2.2.0
-pkgrel=3
+pkgrel=3.01
 pkgdesc='Interactive process viewer'
 arch=('x86_64')
 url='https://hisham.hm/htop/'
@@ -15,7 +15,7 @@ makedepends=('python')
 optdepends=('lsof: show files opened by a process'
             'strace: attach to a running process')
 options=('!emptydirs' debug)
-#validpgpkeys=('8460980B2B79786DE0C7FCC83FD8F43C2BB3C478') # Hisham Muhammad <h@hisham.hm>
+validpgpkeys=('8460980B2B79786DE0C7FCC83FD8F43C2BB3C478') # Hisham Muhammad <h@hisham.hm>
 source=("https://hisham.hm/$pkgname/releases/$pkgver/$pkgname-$pkgver.tar.gz" #{,.asc}
         '0001-fix-option-string.patch')
 sha256sums=('d9d6826f10ce3887950d709b53ee1d8c1849a70fa38e91d5896ad8cbc6ba3c57'
