--- a/prometheus/trunk/PKGBUILD
+++ b/prometheus/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
 
 pkgname=prometheus
-pkgver=2.15.2
+pkgver=2.16.0
 pkgrel=1
 
 pkgdesc='An open-source systems monitoring and alerting toolkit'
@@ -17,7 +17,7 @@ backup=('etc/prometheus/prometheus.yml')
 source=("prometheus-v$pkgver.tar.gz::https://github.com/prometheus/prometheus/archive/v$pkgver.tar.gz"
         prometheus.sysusers)
 
-sha256sums=('2ba37bced3e90c5e7dd3248918f13f2f3444de748cfe413b0a09f82532c3c553'
+sha256sums=('5649b33a752eb231f86649a4781af2a532d7df5afb212bf0e6ec57fd1826cbbc'
             '2747fabb4e56b808361eb7dd7acf9729ab8973d1ebe2f857dd56f6c71f71e45f')
 
 build() {
@@ -46,7 +46,7 @@ build() {
 check() {
   cd prometheus-$pkgver
 
-  go test ./...
+  go test -short ./...
 }
 
 package() {
