--- a/ntfs-3g/trunk/PKGBUILD
+++ b/ntfs-3g/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=ntfs-3g
 _pkgname=ntfs-3g_ntfsprogs
 pkgver=2017.3.23
-pkgrel=3
+pkgrel=4
 pkgdesc='NTFS filesystem driver and utilities'
 url='https://www.tuxera.com/community/open-source-ntfs-3g/'
 arch=('x86_64')
@@ -39,6 +39,7 @@ build() {
 		--enable-xattr-mappings \
 		--enable-posix-acls \
 		--enable-extras \
+		--enable-crypto \
 
 	make
 }
