--- a/freetype2/trunk/PKGBUILD
+++ b/freetype2/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase=freetype2
 pkgname=('freetype2' 'freetype2-demos' 'freetype2-docs')
 pkgver=2.10.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Font rasterization library"
 arch=(x86_64)
 license=('GPL')
@@ -18,6 +18,7 @@ source=(https://download-mirror.savannah.gnu.org/releases/freetype/freetype-${pk
         0001-Enable-table-validation-modules.patch
         0002-Enable-infinality-subpixel-hinting.patch
         0003-Enable-long-PCF-family-names.patch
+        0004-Properly-handle-phantom-points-for-variation-fonts-5.patch
         freetype-2.5.2-more-demos.patch
         freetype2.sh)
 sha1sums=('79874ef4eaa52025126b71d836453b8279bdd331'
@@ -26,9 +27,10 @@ sha1sums=('79874ef4eaa52025126b71d836453b8279bdd331'
           'SKIP'
           'bf5e24878c66404b765eab638783626d777a25ac'
           'SKIP'
-          '283427030ef4b942f01e24ba022f2b84f1733fa8'
-          '1efd1e1db64cb7705296b724920d6328ff5f1f14'
-          '6b289e2ba54a4513af9aa3981b374fccb20ffc89'
+          '77b68e06e417783ca57c7f8d73c67feb9e230a6e'
+          '67dc149d576cea17fe3eb9addcef19bb59b6d5be'
+          '3559f8bb0aadef51ecef2f93c33164109e12b549'
+          'aba1f28bbbf4ff94413096e3d55ac79071a210e2'
           '72cfecbe738085eec475e012617661ad0cc9b76f'
           'bc6df1661c4c33e20f5ce30c2da8ad3c2083665f')
 validpgpkeys=('58E0C111E39F5408C5D3EC76C1A60EACE707FDA5')
@@ -42,6 +44,9 @@ prepare() {
   patch -Np1 -i ../0001-Enable-table-validation-modules.patch
   patch -Np1 -i ../0002-Enable-infinality-subpixel-hinting.patch
   patch -Np1 -i ../0003-Enable-long-PCF-family-names.patch
+
+  # https://bugs.archlinux.org/task/65629
+  patch -Np1 -i ../0004-Properly-handle-phantom-points-for-variation-fonts-5.patch
 
   cd ../freetype2-demos
   # enable more demos
