--- a/libcap/repos/core-x86_64/PKGBUILD
+++ b/libcap/repos/core-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=libcap
-pkgver=2.31
+pkgver=2.32
 pkgrel=1
 pkgdesc='POSIX 1003.1e capabilities'
 arch=(x86_64)
@@ -11,15 +11,16 @@ url='https://sites.google.com/site/fullycapable/'
 license=(GPL2)
 depends=(glibc attr)
 makedepends=(linux-api-headers)
-validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
+provides=(libcap.so)
 source=(https://kernel.org/pub/linux/libs/security/linux-privs/libcap2/libcap-$pkgver.tar.{xz,sign})
-md5sums=('52120c05dc797b01f5a7ae70f4335e96'
-         'SKIP')
+sha256sums=('1005e3d227f2340ad1e3360ef8b69d15e3c72a29c09f4894d7aac038bd26e2be'
+            'SKIP')
+validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
 
 prepare() {
   cd $pkgname-$pkgver
   sed -i "/SBINDIR/s#sbin#bin#" Make.Rules
-  
+
   # use our buildflags
   sed -i "s/CFLAGS :=/CFLAGS += \$(CPPFLAGS) /" Make.Rules
   sed -i "s/LDFLAGS :=/LDFLAGS +=/" Make.Rules
