--- a/usbmuxd/trunk/PKGBUILD
+++ b/usbmuxd/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Gabriel Martinez < reitaka at gmail dot com >
 
 pkgname=usbmuxd
-pkgver=1.1.0+66+g9af2b12
+pkgver=1.1.0+69+g8a69f1a
 pkgrel=1
 pkgdesc="USB Multiplex Daemon"
 url="https://marcansoft.com/blog/iphonelinux/usbmuxd/"
@@ -10,7 +10,7 @@ arch=('x86_64')
 license=('GPL2' 'GPL3')
 depends=('libimobiledevice')
 makedepends=('git')
-_commit=9af2b12552693a47601347e1eafc1e94132d727e  # master
+_commit=8a69f1a78a58476f77b66916091d2405d0cd815f  # master
 source=("git+https://github.com/libimobiledevice/usbmuxd#commit=$_commit" usbmuxd.sysusers)
 sha256sums=('SKIP'
             '044bfb2810b27f7d6c066f142210775176b7484e76a78ea91794f40fdcda6fd9')
