--- a/libgee/trunk/PKGBUILD
+++ b/libgee/trunk/PKGBUILD
@@ -1,9 +1,10 @@
-# Maintainer : Ionut Biru <ibiru@archlinux.org>
+# Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
+# Contributor: Ionut Biru <ibiru@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 
 pkgname=libgee
 pkgver=0.20.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A collection library providing GObject-based interfaces and classes for commonly used data structures"
 url="https://git.gnome.org/browse/libgee"
 license=(LGPL2.1)
