--- a/libcap/repos/core-x86_64/PKGBUILD
+++ b/libcap/repos/core-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=libcap
-pkgver=2.32
+pkgver=2.33
 pkgrel=1
 pkgdesc='POSIX 1003.1e capabilities'
 arch=(x86_64)
@@ -13,7 +13,7 @@ depends=(glibc attr)
 makedepends=(linux-api-headers)
 provides=(libcap.so)
 source=(https://kernel.org/pub/linux/libs/security/linux-privs/libcap2/libcap-$pkgver.tar.{xz,sign})
-sha256sums=('1005e3d227f2340ad1e3360ef8b69d15e3c72a29c09f4894d7aac038bd26e2be'
+sha256sums=('08edeaba2757021aeec45c4eeec52566675e0e0f5d4f057284d729e04f2643d6'
             'SKIP')
 validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
 
@@ -26,13 +26,21 @@ prepare() {
   sed -i "s/LDFLAGS :=/LDFLAGS +=/" Make.Rules
 }
 
+_makeargs=(
+  KERNEL_HEADERS=/usr/include
+  RAISE_SETFCAP=no
+  SBINDIR=/usr/bin
+  lib=lib
+  prefix=/usr
+)
+
 build() {
-  make -C $pkgname-$pkgver KERNEL_HEADERS=/usr/include
+  make -C $pkgname-$pkgver "${_makeargs[@]}"
 }
 
 package() {
   cd $pkgname-$pkgver
-  make prefix=/usr lib=/lib DESTDIR="$pkgdir" RAISE_SETFCAP=no install
+  make DESTDIR="$pkgdir" "${_makeargs[@]}" install
 
   install -Dm644 pam_cap/capability.conf \
     "$pkgdir"/usr/share/doc/$pkgname/capability.conf.example
