--- a/librsvg/repos/extra-x86_64/PKGBUILD
+++ b/librsvg/repos/extra-x86_64/PKGBUILD
@@ -1,47 +1,55 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=librsvg
-pkgver=2.46.4
+pkgver=2.48.0
 pkgrel=1
 epoch=2
 pkgdesc="SVG rendering library"
 url="https://wiki.gnome.org/Projects/LibRsvg"
 arch=(x86_64)
 license=(LGPL)
-depends=(gdk-pixbuf2 pango libcroco)
+depends=(gdk-pixbuf2 pango)
 makedepends=(gobject-introspection vala gtk-doc git rust)
-_commit=c7c2c6c280dec08d4dc804379d0fe389e28fbeb3  # tags/2.46.4^0
-source=("git+https://gitlab.gnome.org/GNOME/librsvg.git#commit=$_commit")
-sha256sums=('SKIP')
+checkdepends=(ttf-dejavu)
+provides=(librsvg-${pkgver%%.*}.so)
+_commit=cc3b2fb0672052721e761ca9dd1c8ab6821cbdf9  # tags/2.48.0^0
+source=("git+https://gitlab.gnome.org/GNOME/librsvg.git#commit=$_commit"
+        lto.diff)
+sha256sums=('SKIP'
+            '3cc8ad1af515b2cb4071f0647319c1cf3280dc054875634239061800af1616b6')
 
 pkgver() {
-  cd $pkgname
+  cd librsvg
   git describe --tags | sed 's/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd librsvg
+
+  # Turn LTO back on
+  git apply -3 ../lto.diff
 
   NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd $pkgname
-  ./configure --prefix=/usr --disable-static --enable-vala --enable-gtk-doc
+  cd librsvg
+  ./configure --prefix=/usr --disable-static --enable-vala \
+    --enable-gtk-doc
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0 /g' libtool
   make
 }
 
 check() {
-  cd $pkgname
+  cd librsvg
   # Reftests are probably broken
-  # e.g. 91-nonzero-translation-ref.png's background is only 95% transparent,
-  # while 91-nonzero-translation-out.png is 100% transparent
+  # some reference images were created without the requested fonts
   make check || :
 }
 
 package() {
-  cd $pkgname
+  cd librsvg
   make DESTDIR="$pkgdir" install
 }
 
