--- a/gdb/repos/extra-x86_64/PKGBUILD
+++ b/gdb/repos/extra-x86_64/PKGBUILD
@@ -1,4 +1,6 @@
-# Maintainer: Allan McRae <allan@archlinux.org>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Maintainer: Anatol Pomozov <anatol.pomozov@gmail.com>
+# Contributor: Allan McRae <allan@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgbase=gdb
@@ -6,15 +8,17 @@ pkgbase=gdb
 # of gdb (for arm/avr/...)
 pkgname=(gdb gdb-common)
 pkgver=9.1
-pkgrel=1
+pkgrel=2
 pkgdesc='The GNU Debugger'
 arch=(x86_64)
 url='https://www.gnu.org/software/gdb/'
 license=(GPL3)
-makedepends=(texinfo python guile2.0 ncurses expat xz)
+makedepends=(texinfo python guile2.0 ncurses expat xz mpfr source-highlight)
 source=(https://ftp.gnu.org/gnu/gdb/${pkgname}-${pkgver}.tar.xz{,.sig})
 sha1sums=('a50e13e1eecea468ea28c4a23d8c5a84f4db25be'
           'SKIP')
+b2sums=('b84b1dc627d7ba697dfd76ba7c0f4f88f1725e1e1b83134d08cf53bf867ebfa07e1d01eff2acd9a57d22a779077bf6ed95d6098e8a58c4d86eaed034ca62ac30'
+        'SKIP')
 validpgpkeys=('F40ADB902B24264AA42E50BF92EDB04BFF325CF3') # Joel Brobecker
 
 prepare() {
@@ -28,7 +32,11 @@ build() {
   cd gdb-$pkgver
 
   mkdir -p build && cd build
-  ../configure --prefix=/usr --disable-nls \
+  ../configure \
+    --prefix=/usr \
+    --disable-nls \
+    --enable-source-highlight \
+    --enable-tui \
     --with-system-readline \
     --with-python=/usr/bin/python \
     --with-guile=guile-2.0 \
@@ -40,20 +48,34 @@ package_gdb-common() {
   depends=(python guile2.0)
 
   cd gdb-$pkgver/build
-  make -C gdb/data-directory DESTDIR=$pkgdir install
+
+  make DESTDIR="$pkgdir" install
+  # resolve conflicts with binutils
+  rm "$pkgdir"/usr/include/{ansidecl,bfd,bfdlink,dis-asm,plugin-api,symcat,ctf,ctf-api,bfd_stdint,diagnostics}.h
+  rm "$pkgdir"/usr/share/info/bfd.info
+  rm "$pkgdir"/usr/lib/{libbfd,libopcodes,libctf,libctf-nobfd}.a
+
+  rm -r "$pkgdir"/usr/{bin,include,lib,share/info,share/man}
 }
 
 package_gdb() {
-  depends=(ncurses expat xz mpfr gdb-common=$pkgver)
+  depends=(ncurses expat xz mpfr source-highlight gdb-common=$pkgver)
   backup=(etc/gdb/gdbinit)
 
   cd gdb-$pkgver/build
-  make -C gdb DESTDIR=$pkgdir install
+  make DESTDIR="$pkgdir" install
+
+  # resolve conflicts with binutils
+  rm "$pkgdir"/usr/include/{ansidecl,bfd,bfdlink,dis-asm,plugin-api,symcat,ctf,ctf-api,bfd_stdint,diagnostics}.h
+  rm "$pkgdir"/usr/share/info/bfd.info
+  rm "$pkgdir"/usr/lib/{libbfd,libopcodes,libctf,libctf-nobfd}.a
 
   # install "custom" system gdbinit
-  install -dm755 $pkgdir/etc/gdb
-  touch $pkgdir/etc/gdb/gdbinit
+  install -dm 755 "$pkgdir/etc/gdb"
+  touch "$pkgdir/etc/gdb/gdbinit"
 
   # comes from gdb-common
-  rm -r $pkgdir/usr/share/gdb/
+  rm -r "$pkgdir/usr/share/gdb/"
 }
+
+# vim: ts=2 sw=2 et:
