--- a/ghostscript/repos/extra-x86_64/PKGBUILD
+++ b/ghostscript/repos/extra-x86_64/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=ghostscript
 pkgname=(ghostscript ghostxps ghostpcl)
-pkgver=9.50
-pkgrel=2
+pkgver=9.51
+pkgrel=1
 pkgdesc="An interpreter for the PostScript language"
 url="https://www.ghostscript.com/"
 arch=('x86_64')
@@ -12,16 +12,11 @@ depends=('libxt' 'libcups' 'fontconfig' 'zlib' 'libpng' 'libjpeg' 'jbig2dec'
          'libtiff' 'lcms2' 'dbus' 'libpaper' 'ijs' 'openjpeg2' 'libidn')
 makedepends=('gtk3' 'gnutls' 'glu' 'freeglut')
 # https://github.com/ArtifexSoftware/ghostpdl-downloads/releases
-source=(https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs${pkgver/./}/ghostpdl-${pkgver}.tar.xz
-        CVE-2019-14869.patch)
-sha512sums=('d6add852f2cb3b2fc7b5d40c42c5d5450f16a057a585f2011b675906b6e3cbf519278e80075459a51c1b78f737146b8a8fe78791a09ca521559f80b41d9ad3eb'
-            '5fdeed2eac83e98c6451070c9142d8e1c836476653b7cf1a6335fca0c2edd1188a967d96499e4278f93385c91c60b4e088540a10d2f83667d585b2651a9bafc8')
+source=(https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs${pkgver/./}/ghostpdl-${pkgver}.tar.xz)
+sha512sums=('f6151ad43ebe0564ddd9e0217d9216410e3fd352b8ecbdf692b16a41c4ec6271cd39400d90c0b88c69a9e0573daa8368caa46230e246b1973808e024b17dba2f')
 
 prepare() {
   cd ghostpdl-${pkgver}
-
-  # CVE-2019-14869.patch
-  patch -Np1 -i ../CVE-2019-14869.patch
 
   # force it to use system-libs
   rm -r cups/libs expat ijs jbig2dec jpeg lcms2mt libpng openjpeg tiff zlib
