--- a/elfutils/repos/core-x86_64/PKGBUILD
+++ b/elfutils/repos/core-x86_64/PKGBUILD
@@ -2,19 +2,16 @@
 # Contributor: Stéphane Gaudreault <stephane@archlinux.org>
 # Contributor: Andrej Gelenberg <andrej.gelenberg@udo.edu>
 
-pkgname=elfutils
+pkgbase=elfutils
+pkgname=(elfutils libelf)
 pkgver=0.178
-pkgrel=1
-pkgdesc="Utilities to handle ELF object files and DWARF debugging information"
-arch=('x86_64')
-url="https://sourceware.org/elfutils/"
-license=('LGPL3' 'GPL' 'GPL3')
-depends=('gcc-libs' 'zlib' 'bzip2' 'xz' 'libmicrohttpd' 'sqlite' 'libarchive' 'curl')
-checkdepends=('rpmextract')
-options=('staticlibs')
-provides=('libelf')
-conflicts=('libelf')
-replaces=('libelf')
+pkgrel=2
+pkgdesc='Utilities to handle ELF object files and DWARF debugging information'
+arch=(x86_64)
+url='https://sourceware.org/elfutils/'
+license=(LGPL3 GPL GPL3)
+makedepends=(gcc-libs zlib bzip2 xz libmicrohttpd sqlite libarchive curl)
+options=(staticlibs)
 source=(https://sourceware.org/elfutils/ftp/${pkgver}/elfutils-${pkgver}.tar.bz2{,.sig})
 sha1sums=('5f52d04105a89e50caf69cea40629c323c1eccd9'
           'SKIP')
@@ -22,7 +19,7 @@ validpgpkeys=('47CC0331081B8BC6D0FD4DA08370665B57816A6A')  # Mark J. Wielaard <m
 validpgpkeys+=('EC3CFE88F6CA0788774F5C1D1AA44BE649DE760A') # Mark Wielaard <mjw@gnu.org>
 
 build() {
-  cd ${pkgbase}-${pkgver}
+  cd $pkgbase-$pkgver
 
   CFLAGS+=" -g"  # required for test-suite success
   ./configure --prefix=/usr --program-prefix="eu-" --enable-deterministic-archives
@@ -31,13 +28,27 @@ build() {
 }
 
 check() {
-  cd ${pkgbase}-${pkgver}
+  cd $pkgbase-$pkgver
 
   # Some tests fail due to limited capabilities of build chroot
   make check || :
 }
 
-package() {
-  cd ${pkgbase}-${pkgver}
-  make DESTDIR="${pkgdir}" install
+package_elfutils() {
+  depends=(gcc-libs zlib bzip2 xz libmicrohttpd sqlite libarchive curl
+           "libelf=$pkgver-$pkgrel")
+
+  cd $pkgbase-$pkgver
+  make DESTDIR="$pkgdir" install
+
+  mkdir "$srcdir/libelf" 
+  mv "$pkgdir"/usr/{lib,include} "$srcdir/libelf/"
+}
+
+package_libelf() {
+  pkgdesc='Libraries to handle ELF object files and DWARF debugging information'
+  depends=(gcc-libs zlib bzip2 xz curl)
+
+
+  mv libelf "$pkgdir/usr"
 }
